# OneBitWebPython

./: README.md
1-flask/: 1-iniciando-rotas-flask.py  2-variaveis-html-flask.py  instalando Flask
1-flask/templates/: cursos.html  html_base.html  index.html  sobre.html
2-FastAPI/1-introducao/: 1-type-hint.py  2-pydantic.py  3-async-await.py
2-FastAPI/2-iniciando-fastapi/: iniciando-fast-api.py  usando-path-parameters.py  usando-query-parameters.py
2-FastAPI/3-projeto/: .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
2-FastAPI/3-projeto/app/: .env  app.py  instruções  patches.py
2-FastAPI/3-projeto/app/api/api_v1/: router.py
2-FastAPI/3-projeto/app/api/api_v1/auth/: jwt.py
2-FastAPI/3-projeto/app/api/api_v1/dependencies/: user_deps.py
2-FastAPI/3-projeto/app/api/api_v1/handlers/: user.py
2-FastAPI/3-projeto/app/api/api_v1/handlers_controllers/: tasks.py  user_controller.py
2-FastAPI/3-projeto/app/core/: config.py  secutiry.py
2-FastAPI/3-projeto/app/model/: task_model.py  user_model.py
2-FastAPI/3-projeto/app/schemas/: user_cad.py  user_show.py
2-FastAPI/3-projeto/app/schemas/tasks/: task_cad.py  task_show.py  task_update.py
2-FastAPI/3-projeto/app/services/: task_service.py  user_service.py
